force-app/main/default/objects/PMC_SS_AccountSalesAreaRelationship__c/PMC_SS_AccountSalesAreaRelationship__c.object-meta.xml
<CustomObject>
    <description>Junction Object to relate Account and Sales Areas</description>
    <label>Account Sales Area Relationship</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Sales Area Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>