force-app/main/default/objects/PMC_SS_AccountSalesAreaRelationship__c/fields/PMC_CPQ_DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DistributionChannel__c</fullName>
    <formula>CASE( TEXT( PMC_SS_SalesArea__r.PMC_SS_DistributionChannel__c ),
&quot;0&quot;,&quot;Common&quot;,
&quot;00&quot;,&quot;Common&quot;,
&quot;&quot;)</formula>
    <label>Distribution Channel</label>
    <type>Text</type>
</CustomField>