force-app/main/default/objects/PMC_SS_AccountSalesAreaRelationship__c/fields/PMC_CPQ_Division__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Division__c</fullName>
    <formula>CASE( TEXT(PMC_SS_SalesArea__r.PMC_SS_Division__c),
&quot;10&quot;,&quot;Domestic&quot;,
&quot;20&quot;,&quot;Export&quot;,
&quot;30&quot;,&quot;Intercompany&quot;,&quot;&quot;)</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>