force-app/main/default/objects/PMC_SS_AccountSalesAreaRelationship__c/fields/PMC_CPQ_SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SalesOrganization__c</fullName>
    <formula>TEXT( PMC_SS_SalesArea__r.PMC_SS_SalesOrganization__c )</formula>
    <label>Sales Organization</label>
    <type>Text</type>
</CustomField>