force-app/main/default/objects/PMC_SS_AccountSalesAreaRelationship__c/fields/PMC_SS_Account__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Account__c</fullName>
    <description>Master Detail relationship between Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Areas</relationshipLabel>
    <relationshipName>AccountSalesAreRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>