force-app/main/default/objects/PMC_SS_AccountSalesAreaRelationship__c/fields/PMC_SS_ExternalUniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ExternalUniqueIdentifier__c</fullName>
    <description>Stores unique identifier of record with concatenation of: SAP account number + Sales Org + Division + Distribution Channel</description>
    <externalId>true</externalId>
    <label>External Unique Identifier</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>