force-app/main/default/objects/PMC_SS_AccountSalesAreaRelationship__c/fields/PMC_SS_IsActive__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Specifies whether this object is active or not</description>
    <inlineHelpText>When checked, this junction relationship is Active</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>