force-app/main/default/objects/PMC_SS_AccountSalesAreaRelationship__c/fields/PMC_SS_SalesArea__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SalesArea__c</fullName>
    <description>Master Detail relationship to Sales Area</description>
    <label>Sales Area</label>
    <referenceTo>PMC_SS_SalesArea__c</referenceTo>
    <relationshipName>AccountSalesAreRelationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>