force-app/main/default/objects/PMC_SS_AccountSalesAreaRelationship__c/listViews/All_Account_Sales_Area_Relationships.listView-meta.xml
<ListView>
    <fullName>All_Account_Sales_Area_Relationships</fullName>
    <columns>NAME</columns>
    <columns>PMC_SS_Account__c</columns>
    <columns>PMC_CPQ_SalesOrganization__c</columns>
    <columns>PMC_CPQ_DistributionChannel__c</columns>
    <columns>PMC_CPQ_Division__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Account Sales Area Relationships</label>
</ListView>